--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "A bot able to control a traffic light",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node_modules\\typescript\\bin\\tsc -p ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xaviermignot/ns-traffic-light-bot.git"
   },
   "author": "Xavier Mignot",
   "license": "ISC",
   "dependencies": {
     "botbuilder": "^3.2.3",
     "needle": "^1.1.2",
-    "restify": "^4.1.1"
+    "restify": "^4.1.1",
+    "typescript": "^2.0.3"
   }
 }
