--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "botbuilder": "^3.2.3",
+    "dotenv": "^2.0.0",
     "needle": "^1.1.2",
     "restify": "^4.1.1",
     "typescript": "^2.0.3"
