--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Xavier Mignot",
   "license": "ISC",
   "dependencies": {
-    "botbuilder": "^3.7.0",
+    "azure-storage": "^2.1.0",
+    "botbuilder": "^3.8.1",
     "dotenv": "^4.0.0",
     "needle": "^1.6.0",
     "restify": "^4.3.0",
-    "typescript": "^2.2.2"
-  }
+    "typescript": "^2.3.2"
+  },
+  "devDependencies": {}
 }
