--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Xavier Mignot",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^12.0.2",
     "botbuilder": "^3.12.0",
     "dotenv": "^4.0.0",
     "needle": "^1.6.0",
