--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "Xavier Mignot",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^12.0.2",
     "botbuilder": "^3.12.0",
-    "dotenv": "^4.0.0",
-    "needle": "^1.6.0",
-    "restify": "^4.3.2",
+    "dotenv": "^8.0.0",
+    "needle": "^2.4.0",
+    "restify": "^8.3.2",
     "typescript": "^3.4.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^12.0.2"
+  }
 }
